--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
-@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
-
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Young serif";
+  background-color: #111;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 450px;
+}
+
+.square {
+  height: 16px;
+  width: 16px;
+  box-shadow: 0 0 4px #000;
+  margin: 2px;
+  background-color: #1d1d1d;
+  transform: 0.3s ease;
+}
+
+.square:hover {
+  transition-duration: 0s;
 }
