--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   box-shadow: 0 0 4px #000;
   margin: 2px;
   background-color: #1d1d1d;
-  transform: 0.3s ease;
+  transition: 3s ease;
 }
 
 .square:hover {
